[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/img/fighter/fighter.png" type="Texture" id=1]
[ext_resource path="res://src/fighter/Fighter.gd" type="Script" id=2]
[ext_resource path="res://src/fighter/change_col.shader" type="Shader" id=3]
[ext_resource path="res://assets/img/fighter/aura.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 0.964706, 0.247059, 0.298039, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.92751, 6.30907 )

[sub_resource type="Animation" id=4]
length = 0.25
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.06, 0.08, 0.12, 0.16, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.14, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=17]
resource_name = "knockback"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "knockback"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=10]
states/attack/node = SubResource( 6 )
states/attack/position = Vector2( 441, 99 )
states/idle/node = SubResource( 7 )
states/idle/position = Vector2( 199, 85 )
states/knockback/node = SubResource( 18 )
states/knockback/position = Vector2( 302, 203 )
transitions = [ "idle", "attack", SubResource( 8 ), "attack", "idle", SubResource( 9 ), "idle", "knockback", SubResource( 19 ), "knockback", "idle", SubResource( 20 ), "attack", "knockback", SubResource( 21 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 8.35052, 3.36024 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 1.61729, 4.57729 )

[sub_resource type="Shader" id=16]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 target_col: hint_color;
uniform vec4 replace_col: hint_color;

void fragment(){
	vec4 cur_color = texture(TEXTURE, UV);
	vec4 bg_col = textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0);
	
	vec4 d4 = abs(bg_col - target_col);
    float d = max(max(d4.r, d4.g), d4.b);
	
	if ((d < 0.01) && (cur_color.a > 0.0)) {
		COLOR = replace_col;
	} else {
		COLOR.a = 0.0
	}
}"

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = SubResource( 16 )
shader_param/target_col = Color( 0.215686, 0.192157, 0.231373, 1 )
shader_param/replace_col = Color( 0.494118, 0.443137, 0.521569, 1 )

[sub_resource type="ParticlesMaterial" id=22]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Fighter" type="KinematicBody2D"]
material = SubResource( 1 )
collision_mask = 0
script = ExtResource( 2 )
jump_speed = -350
gravity = 1000
knocback_speed = 600

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
z_index = 1
texture = ExtResource( 1 )
hframes = 12
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.960491, 1.73498 )
shape = SubResource( 3 )

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/knockback = SubResource( 17 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 11 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 7.53914, 0 )
shape = SubResource( 12 )
disabled = true

[node name="Hurbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurbox"]
position = Vector2( 0.960491, 0 )
shape = SubResource( 13 )

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Sprite2" type="Sprite" parent="."]
material = SubResource( 15 )
position = Vector2( 0.960491, 0 )
texture = ExtResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
process_material = SubResource( 22 )

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
